vlib/v/checker/tests/generics_method_receiver_type_err_b.out
vlib/v/checker/tests/generics_method_receiver_type_err_b.vv:8:12: error: generic struct `ConsumableResources` in fn declaration must specify the generic type names, e.g. ConsumableResources[T]
    6 |     used_resources map[T]Resources
    7 | }
    8 | pub fn (cr &ConsumableResources) get_total_resources() Resources {
      |            ~~~~~~~~~~~~~~~~~~~~
    9 |     return cr.total_resources
   10 | }
